# oppt

./: README.md  install_dependencies.sh
cfg/: 2DOFManipulator.cfg  4DOFFactory1.cfg  DubinMaze.cfg  KukaTable.cfg  Rocksample.cfg
cmake/: OPPTMacros.cmake  SearchForStuff.cmake  opptConfig.cmake  opptConfig.cmake.in
docs/: Mainpage.md
docs/html/: ABTOptions_8hpp_source.html  ActionInformation_8hpp_source.html  ActionMappingEntry_8hpp.html  ActionMappingEntry_8hpp_source.html  ActionMapping_8hpp.html  ActionNode_8cpp.html  (+1381 more)
src/: CMakeLists.txt  global.hpp
src/oppt/events/: CMakeLists.txt  Event.cpp  Event.hpp
src/oppt/filter/particleFilter/: ParticleFilter.cpp  ParticleFilter.hpp
src/oppt/gazeboInterface/: CMakeLists.txt  GazeboInterface.cpp  GazeboInterface.hpp  GazeboSubscriber.cpp  GazeboSubscriber.hpp
src/oppt/gazeboInterface/gazebo/: OpptJoint.hpp  OpptODEJoint.hpp  OpptODELink.cpp  OpptODELink.hpp  OpptODEPhysics.cpp  OpptODEPhysics.hpp
src/oppt/gazeboInterface/sensors/: GPSSensor.cpp  SensorInterface.cpp  SensorInterface.hpp
src/oppt/opptCore/: ActionInformation.hpp  CollisionObject.hpp  CollisionReport.hpp  CollisionRequest.hpp  Distribution.hpp  EnvironmentInfo.hpp  HeuristicInfo.hpp  MathUtils.hpp  Observation.hpp  ObservationReport.hpp  Obstacle.hpp  OpptUserData.hpp  PropagationReport.hpp  RobotState.hpp  RobotStateUserData.hpp  Scene.hpp  SpaceInformation.hpp  core.hpp  includes.hpp  typedefs.hpp  utils.hpp
src/oppt/opptCore/geometric/: Box.hpp  Cylinder.hpp  Geometry.hpp  Mesh.hpp  Sphere.hpp
src/oppt/opptCore/resources/: resources.hpp
src/oppt/plugin/: Plugin.hpp
src/oppt/problemEnvironment/: ChangesParser.cpp  ChangesParser.hpp  ProblemEnvironment.hpp  ProblemEnvironmentOptions.hpp
src/oppt/robotEnvironment/: Box.cpp  BoxObstacle.cpp  CMakeLists.txt  CollisionObject.cpp  Cylinder.cpp  CylinderObstacle.cpp  Mesh.cpp  MeshObstacle.cpp  Obstacle.cpp  RobotEnvironment.cpp  SDFParser.cpp  SceneImpl.cpp  Sphere.cpp  SphereObstacle.cpp  Terrain.cpp
src/oppt/robotEnvironment/include/: BoxObstacle.hpp  CylinderObstacle.hpp  EnvironmentChanges.hpp  MeshObstacle.hpp  Obstacle.hpp  RobotEnvironment.hpp  SDFParser.hpp  SceneImpl.hpp  SphereObstacle.hpp  Terrain.hpp
src/oppt/robotHeaders/: ActionSpace.hpp  ObservationSpace.hpp  Serializer.hpp  StateSpace.hpp  robot.hpp
src/oppt/robotHeaders/InverseKinematics/: IKSolver.hpp  InverseKinematics.hpp
src/oppt/robotHeaders/RobotImpl/: RobotConfigOptions.hpp  RobotImpl.hpp  RobotImplSDFParser.hpp  RobotImplSerializer.hpp
src/oppt/robots/: Action.cpp  RobotState.cpp  Serializer.cpp  robot.cpp
src/oppt/robots/InverseKinematics/: IKSolver.cpp  InverseKinematics.cpp
src/oppt/robots/RobotImpl/: RobotImpl.cpp  RobotImplSDFParser.cpp  RobotImplSerializer.cpp  RobotImplSpaceInformationFactory.cpp
src/oppt/solver/: solver.hpp
src/oppt/utils/include/: filesystemUtils.hpp
src/oppt/viewerPublisher/: Parser.hpp  SDFParser.cpp  SDFParser.hpp  ViewerPublisher.cpp  ViewerPublisher.hpp
src/options/: CMakeLists.txt  Options.hpp  option_parser.hpp
src/plugins/heuristicPlugins/: RocksampleHeuristicPlugin.cpp
src/plugins/heuristicPlugins/RRTHeuristicPlugin/: CMakeLists.txt  RRTHeuristicPlugin.cpp
src/plugins/heuristicPlugins/RRTHeuristicPlugin/RRTConnect/: RRTConnect.cpp  RRTConnect.hpp  Tree.cpp  Tree.hpp
src/plugins/heuristicPlugins/RocksampleHeuristicPlugin/: RocksampleHeuristicPlugin.cpp
src/plugins/initialBeliefPlugins/: DefaultInitialBeliefPlugin.cpp  RocksampleInitialBeliefPlugin.cpp
src/plugins/initialBeliefPlugins/DefaultInitialBeliefPlugin/: DefaultInitialBeliefPlugin.cpp
src/plugins/observationPlugins/: DefaultObservationPlugin.cpp  DefaultObservationPluginOptions.hpp  DubinObservationPlugin.cpp  RocksampleObservationPlugin.cpp
src/plugins/observationPlugins/DefaultObservationPlugin/: DefaultObservationPlugin.cpp
src/plugins/observationPlugins/DubinObservationPlugin/: DubinObservationPlugin.cpp
src/plugins/observationPlugins/RocksampleObservationPlugin/: RocksampleObservationPlugin.cpp
src/plugins/rewardPlugins/: DefaultRewardPlugin.cpp  RocksampleRewardPlugin.cpp
src/plugins/rewardPlugins/DefaultRewardPlugin/: DefaultRewardPlugin.cpp
src/plugins/rewardPlugins/RocksampleRewardPlugin/: RocksampleRewardPlugin.cpp
src/plugins/terminalPlugins/: DefaultTerminalPlugin.cpp  GoalParser.hpp
src/plugins/terminalPlugins/DefaultTerminalPlugin/: DefaultTerminalPlugin.cpp
src/plugins/transitionPlugins/: DefaultTransitionPlugin.cpp  DefaultTransitionPluginOptions.hpp  DubinTransitionPlugin.cpp  RocksampleTransitionPlugin.cpp
src/plugins/transitionPlugins/DefaultTransitionPlugin/: DefaultTransitionPlugin.cpp
src/plugins/transitionPlugins/DubinTransitionPlugin/: DubinTransitionPlugin.cpp
src/plugins/transitionPlugins/RocksampleTransitionPlugin/: RocksampleTransitionPlugin.cpp
src/solvers/: solver.hpp
src/solvers/ABT/: CMakeLists.txt  solverABT.hpp
src/solvers/ABT/robotModel/: ActionPool.cpp  RobotModel.cpp  RobotSerializer.cpp  RobotTextSerializer.cpp  position_history.cpp  position_history.hpp
src/solvers/ABT/robotModel/abtSimulator/: FrapuABTSimulator.cpp  FrapuABTSimulator.hpp
src/solvers/ABT/robotModel/mappings/: enumeratedObservations.cpp
src/solvers/ABT/robotModel/statsSerializer/: StatsSerializer.hpp
src/solvers/ABT/solver/: Solver.cpp
src/solvers/ABT/solver/mappings/observations/: approximate_observations.cpp
src/solvers/ABT/solver/search/: search_interface.cpp
src/solvers/ABT/solver/search/action-choosers/: choosers.cpp
src/viewer/: RvizInterface.cpp  RvizInterface.hpp
(+92 files in other folders)
